Fix link extra spacing
The 4px padding on the side were producing a strange behavior when
titles had links. Decreased to 2px and looks just fine now.

--- a/app/_assets/_scss/_base.typography.scss
+++ b/app/_assets/_scss/_base.typography.scss
@@ -4,7 +4,7 @@
 
 a{
     color: $color-link-text;
-    padding: 2px 4px;
+    padding: 2px 2px;
 
     &:visited{
         background-color: $color-link-bg;
